# picross-solver

./: CMakeLists.txt  Grid.cpp  Grid.h  README.md  Tomographie.cpp  Tomographie.h  file_to_sequence.cpp  file_to_sequence.h  main.cpp  utils.h
include/: Grid.h  Tomographie.h  file_to_sequence.h  utils.h
src/: Grid.cpp  Tomographie.cpp  file_to_sequence.cpp  main.cpp
tests/input/: 17.txt
